--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lifemon">
+   <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
    <application
         android:label="lifemon"
         android:name="${applicationName}"
